# BigOs

./: .gitignore  App.xaml  App.xaml.cs  BrowserEngine.cs  CMakeLists.txt  COMMANDS.sh  CONFIGURATION.md  Cargo.toml  HOW_TO_INSTALL.md  INSTALL.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  INSTALLATION_SYSTEM.md  MainWindow.xaml  MainWindow.xaml.cs  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UnixBrowser.bat  UnixBrowser.csproj  install.bat  install.ps1  installer.iss  main.js  menu.bat  package-lock.json  package.json  patch.py  patch2.py  preload.js  start.bat  start.ps1
.github/workflows/: release-android.yml  release-desktop.yml
Config/: BrowserConfig.cs
Models/: Favorite.cs  Tab.cs
Services/: FavoritesManager.cs  PWAManager.cs  ReactNativeManager.cs  TabManager.cs
apps/bigos-desktop/: Cargo.toml
apps/bigos-desktop/src/: chrome.rs  main.rs
cpp/apps/bigos-desktop/: CMakeLists.txt
cpp/apps/bigos-desktop/src/: main.cpp
cpp/core/: CMakeLists.txt
cpp/core/include/bigos/core/: tab_manager.h  url.h
cpp/core/src/: tab_manager.cpp  url.cpp
crates/bigos-android/: Cargo.toml
crates/bigos-android/src/: lib.rs
crates/bigos-core/: Cargo.toml
crates/bigos-core/src/: lib.rs  tab.rs  url_utils.rs
src/cli/: browser.js
src/renderer/: app.js  index.html
src/renderer/styles/: theme.css
