[workspace]
members = [
    "crates/bigos-core",
    "crates/bigos-android",
    "apps/bigos-desktop",
]
resolver = "2"

[workspace.package]
authors = ["BigOs Contributors"]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
bigos-core = { path = "crates/bigos-core" }
tao  = "0.30"
wry  = "0.47"

